--- a/Views/TrainingPlanPage.xaml
+++ b/Views/TrainingPlanPage.xaml
@@ -72,7 +72,7 @@
 
 
 
-                                    <Grid  BackgroundColor="{DynamicResource PageBackgroundColor}">
+                                    <Grid  BackgroundColor="{DynamicResource PageBackgroundColor}" RowSpacing="5">
                                         <Grid.RowDefinitions>
                                             <RowDefinition Height="auto" />
                                             <RowDefinition Height="auto" />
@@ -98,22 +98,28 @@
                                         <Button Grid.Row="0" Grid.Column="2" TextColor="{DynamicResource PrimaryColor}" ZIndex="999"
                                                 Text="X" Command="{Binding Source={RelativeSource AncestorType={x:Type CollectionView}},
                                             Path=BindingContext.Delete}" 
-                                                CommandParameter="{Binding .}" FontSize="12" HeightRequest="20"
+                                                CommandParameter="{Binding .}" FontSize="15" HeightRequest="20"
                                                 Padding="0" BackgroundColor="Transparent" HorizontalOptions="End" 
                                                 VerticalOptions="Start"/>
+                                        
                                         <Label  Grid.Row="0" Grid.Column="0" TextDecorations="Underline"
                                                 TextColor="{DynamicResource PrimaryColor}" 
                                                 HorizontalTextAlignment="Start"
-                                                Text="Poniedziałek" FontSize="12"  />
-                                        <Label  Grid.Row="1" Grid.Column="0"
-                                                TextColor="{DynamicResource PrimaryColor}" 
+                                                Text="Poniedziałek" FontSize="18"  />
+
+                                    
+
+                                            <Label  Grid.Row="1" Grid.Column="0"
+                                                TextColor="{DynamicResource PrimaryColor}"
                                                 HorizontalTextAlignment="Center"
                                                 Text="{Binding MondayParts}" FontSize="15"  />
+                                      
 
                                         <Label  Grid.Row="2" Grid.Column="0" TextDecorations="Underline"
                                                 TextColor="{DynamicResource PrimaryColor}" 
                                                 HorizontalTextAlignment="Start"
-                                                Text="Wtorek" FontSize="12"  />
+                                                Text="Wtorek" FontSize="18"  />
+                                        
                                         <Label  Grid.Row="3" Grid.Column="0"
                                                 TextColor="{DynamicResource PrimaryColor}" 
                                                 HorizontalTextAlignment="Center"
@@ -122,7 +128,7 @@
                                         <Label  Grid.Row="4" Grid.Column="0" TextDecorations="Underline"
                                                 TextColor="{DynamicResource PrimaryColor}" 
                                                 HorizontalTextAlignment="Start"
-                                                Text="Środa" FontSize="12"  />
+                                                Text="Środa" FontSize="18"  />
                                         <Label  Grid.Row="5" Grid.Column="0"
                                                 TextColor="{DynamicResource PrimaryColor}" 
                                                 HorizontalTextAlignment="Center"
@@ -131,7 +137,7 @@
                                         <Label  Grid.Row="6" Grid.Column="0" TextDecorations="Underline"
                                                 TextColor="{DynamicResource PrimaryColor}" 
                                                 HorizontalTextAlignment="Start"
-                                                Text="Czwartek" FontSize="12"  />
+                                                Text="Czwartek" FontSize="18"  />
                                         <Label  Grid.Row="7" Grid.Column="0"
                                                 TextColor="{DynamicResource PrimaryColor}" 
                                                 HorizontalTextAlignment="Center"
@@ -140,7 +146,7 @@
                                         <Label  Grid.Row="8" Grid.Column="0" TextDecorations="Underline"
                                                 TextColor="{DynamicResource PrimaryColor}" 
                                                 HorizontalTextAlignment="Start"
-                                                Text="Piątek" FontSize="12"  />
+                                                Text="Piątek" FontSize="18"  />
                                         <Label  Grid.Row="9" Grid.Column="0"
                                                 TextColor="{DynamicResource PrimaryColor}" 
                                                 HorizontalTextAlignment="Center"
@@ -149,16 +155,16 @@
                                         <Label  Grid.Row="10" Grid.Column="0" TextDecorations="Underline"
                                                 TextColor="{DynamicResource PrimaryColor}" 
                                                 HorizontalTextAlignment="Start"
-                                                Text="Sobota" FontSize="12"  />
+                                                Text="Sobota" FontSize="18"  />
                                         <Label  Grid.Row="11" Grid.Column="0"
                                                 TextColor="{DynamicResource PrimaryColor}" 
                                                 HorizontalTextAlignment="Center"
                                                 Text="{Binding SaturdayParts}" FontSize="15"  />
 
-                                        <Label  Grid.Row="12" Grid.Column="0" TextDecorations="Underline"
+                                        <Label  Grid.Row="20" Grid.Column="0" TextDecorations="Underline"
                                                 TextColor="{DynamicResource PrimaryColor}" 
                                                 HorizontalTextAlignment="Start"
-                                                Text="Niedziela" FontSize="12"  />
+                                                Text="Niedziela" FontSize="18"  />
                                         <Label  Grid.Row="13" Grid.Column="0"
                                                 TextColor="{DynamicResource PrimaryColor}" 
                                                 HorizontalTextAlignment="Center"
@@ -182,11 +188,11 @@
         <VerticalStackLayout Grid.Row="0" HorizontalOptions="Center" VerticalOptions="Center">
             <Button
             Command="{Binding NewTrainingPlanAddedCommand}" Opacity="0.5" Text="kliknij, aby dodać tygodniowy plan treningowy" LineBreakMode="CharacterWrap"
-            FontSize="20" HorizontalOptions="Center" Padding="50" BorderWidth="1" Margin="20" IsVisible="{Binding IsDisplayButton}"
+            FontSize="20" HorizontalOptions="Center" Padding="20" BorderWidth="1" Margin="20" IsVisible="{Binding IsDisplayButton}"
             TextColor="Black" Background="White" />
+            <Label Text="Lub wybierz z listy" HorizontalTextAlignment="Center" TextColor="{DynamicResource PrimaryColor}" IsVisible="{Binding IsDisplayButton}"/>
 
-
-            <CollectionView
+            <CollectionView Margin="20"
     ItemsSource="{Binding Plans}"
     SelectionMode="Single"
     SelectionChangedCommand="{Binding SelectReadyPlan}"
@@ -194,12 +200,49 @@
                 IsVisible="{Binding IsDisplayButton}">
 
 
-                <CollectionView.ItemTemplate>
+                    <CollectionView.ItemTemplate>
                     <DataTemplate>
-                        <VerticalStackLayout>
-                                <Label Text="{Binding Name}" FontSize="18" />
+
+                            <VerticalStackLayout x:Name="Vertical" BackgroundColor="Transparent">
+                                <VisualStateManager.VisualStateGroups>
+                                    <VisualStateGroup x:Name="CommonStates">
+                                        <VisualState x:Name="Normal">
+                                            <VisualState.Setters>
+                                                <Setter TargetName="Vertical" Property="Scale" Value="1" />
+                                                <Setter TargetName="Vertical" Property="TranslationY" Value="0" />
+                                                <Setter TargetName="Vertical" Property="BackgroundColor" Value="Transparent" />
+                                            </VisualState.Setters>
+                                        </VisualState>
+
+                                        <VisualState x:Name="Selected">
+                                            <VisualState.Setters>
+                                                <Setter TargetName="Vertical" Property="Scale" Value="0.96" />
+                                                <Setter TargetName="Vertical" Property="TranslationY" Value="2" />
+                                                <Setter TargetName="Vertical" Property="BackgroundColor" Value="Transparent" />
+
+
+
+                                            </VisualState.Setters>
+                                        </VisualState>
+                                    </VisualStateGroup>
+                                </VisualStateManager.VisualStateGroups>
+                            
+                                
+                            
+                            <Border Stroke="Transparent"
+                                Background="White"
+                                StrokeThickness="0"
+                                Padding="5"
+                                Margin="5"
+                                StrokeShape="RoundRectangle 10">
+                                <VerticalStackLayout>
+                                <Label Text="{Binding Name}" FontSize="18" TextColor="{DynamicResource PrimaryColor}" />
                                 <Label Text="{Binding Description}" FontSize="13" TextColor="Gray"/>
-                            </VerticalStackLayout>
+                                </VerticalStackLayout>
+                            </Border>
+                            
+                        </VerticalStackLayout>
+
                     </DataTemplate>
                 </CollectionView.ItemTemplate>
 
