--- a/Views/AddPersonPage.xaml
+++ b/Views/AddPersonPage.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:charts="clr-namespace:Microcharts.Maui;assembly=Microcharts.Maui"
              x:Class="WorkoutDiary.Views.AddPersonPage"
-             Title="Cardio" Shell.TitleColor="{DynamicResource PrimaryColor}" BackgroundColor="{DynamicResource PageBackgroundColor}">
+             Title="Cardio" Shell.TitleColor="{DynamicResource PrimaryColor}" >
     <Grid>
 
         <Grid.RowDefinitions>
