--- a/Views/AddTrainingPlanPage.xaml
+++ b/Views/AddTrainingPlanPage.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              x:Class="WorkoutDiary.Views.AddTrainingPlanPage"
-             Title="Dodawanie planu treningowego" Shell.TitleColor="{DynamicResource PrimaryColor}" BackgroundColor="{DynamicResource PageBackgroundColor}">
+             Title="Dodawanie planu treningowego" Shell.TitleColor="{DynamicResource PrimaryColor}" BackgroundImageSource="lowpoly.jpg">
     <ScrollView>
         
 
