--- a/Views/RotationPlanPage.xaml
+++ b/Views/RotationPlanPage.xaml
@@ -2,7 +2,7 @@
 <ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="WorkoutDiary.Views.RotationPlanPage"
-    xmlns:viewmodels="clr-namespace:WorkoutDiary.ViewModels" Shell.TitleColor="{DynamicResource PrimaryColor}" BackgroundColor="#E5E5E5">
+    xmlns:viewmodels="clr-namespace:WorkoutDiary.ViewModels" Shell.TitleColor="{DynamicResource PrimaryColor}">
 
 
     <Grid RowDefinitions="auto">
