--- a/Views/TrainingPlanHostPage.xaml
+++ b/Views/TrainingPlanHostPage.xaml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             x:Class="WorkoutDiary.Views.TrainingPlanHostPage" Title="{Binding CurrentTitle}" Shell.TitleColor="Black" BackgroundColor="#E5E5E5">
+             x:Class="WorkoutDiary.Views.TrainingPlanHostPage" Title="{Binding CurrentTitle}" Shell.TitleColor="Black" BackgroundImageSource="lowpoly.jpg">
 
 
 
