--- a/Views/TrainingPlanPage.xaml
+++ b/Views/TrainingPlanPage.xaml
@@ -101,73 +101,73 @@
                                                 CommandParameter="{Binding .}" FontSize="15" HeightRequest="20"
                                                 Padding="0" BackgroundColor="Transparent" HorizontalOptions="End" 
                                                 VerticalOptions="Start"/>
+
+                                        
+                                            
                                         
                                         <Label  Grid.Row="0" Grid.Column="0" TextDecorations="Underline"
-                                                TextColor="{DynamicResource PrimaryColor}" 
-                                                HorizontalTextAlignment="Start"
+                                                TextColor="{DynamicResource PrimaryColor}" FontAttributes="Bold"
+                                                HorizontalTextAlignment="Start" 
                                                 Text="Poniedziałek" FontSize="18"  />
+                                        <Label  Grid.Row="1" Grid.Column="0"
+                                             TextColor="{DynamicResource PrimaryColor}"
+                                             HorizontalTextAlignment="Start"
+                                             Text="{Binding MondayParts}" FontSize="15"  />
 
-                                    
-
-                                            <Label  Grid.Row="1" Grid.Column="0"
-                                                TextColor="{DynamicResource PrimaryColor}"
-                                                HorizontalTextAlignment="Center"
-                                                Text="{Binding MondayParts}" FontSize="15"  />
-                                      
 
                                         <Label  Grid.Row="2" Grid.Column="0" TextDecorations="Underline"
-                                                TextColor="{DynamicResource PrimaryColor}" 
+                                                TextColor="{DynamicResource PrimaryColor}"  FontAttributes="Bold"
                                                 HorizontalTextAlignment="Start"
                                                 Text="Wtorek" FontSize="18"  />
                                         
                                         <Label  Grid.Row="3" Grid.Column="0"
                                                 TextColor="{DynamicResource PrimaryColor}" 
-                                                HorizontalTextAlignment="Center"
-                                                Text="{Binding TuesdayParts}" FontSize="15"  />
+                                                HorizontalTextAlignment="Start"
+                                                Text="{Binding TuesdayParts}" FontSize="15" />
 
                                         <Label  Grid.Row="4" Grid.Column="0" TextDecorations="Underline"
-                                                TextColor="{DynamicResource PrimaryColor}" 
+                                                TextColor="{DynamicResource PrimaryColor}"  FontAttributes="Bold"
                                                 HorizontalTextAlignment="Start"
                                                 Text="Środa" FontSize="18"  />
                                         <Label  Grid.Row="5" Grid.Column="0"
                                                 TextColor="{DynamicResource PrimaryColor}" 
-                                                HorizontalTextAlignment="Center"
+                                                HorizontalTextAlignment="Start"
                                                 Text="{Binding WednesdayParts}" FontSize="15"  />
 
                                         <Label  Grid.Row="6" Grid.Column="0" TextDecorations="Underline"
-                                                TextColor="{DynamicResource PrimaryColor}" 
+                                                TextColor="{DynamicResource PrimaryColor}"  FontAttributes="Bold"
                                                 HorizontalTextAlignment="Start"
                                                 Text="Czwartek" FontSize="18"  />
                                         <Label  Grid.Row="7" Grid.Column="0"
                                                 TextColor="{DynamicResource PrimaryColor}" 
-                                                HorizontalTextAlignment="Center"
+                                                HorizontalTextAlignment="Start"
                                                 Text="{Binding ThursdayParts}" FontSize="15"  />
 
                                         <Label  Grid.Row="8" Grid.Column="0" TextDecorations="Underline"
                                                 TextColor="{DynamicResource PrimaryColor}" 
-                                                HorizontalTextAlignment="Start"
+                                                HorizontalTextAlignment="Start" FontAttributes="Bold"
                                                 Text="Piątek" FontSize="18"  />
                                         <Label  Grid.Row="9" Grid.Column="0"
                                                 TextColor="{DynamicResource PrimaryColor}" 
-                                                HorizontalTextAlignment="Center"
+                                                HorizontalTextAlignment="Start"
                                                 Text="{Binding FridayParts}" FontSize="15"  />
 
                                         <Label  Grid.Row="10" Grid.Column="0" TextDecorations="Underline"
                                                 TextColor="{DynamicResource PrimaryColor}" 
-                                                HorizontalTextAlignment="Start"
+                                                HorizontalTextAlignment="Start" FontAttributes="Bold"
                                                 Text="Sobota" FontSize="18"  />
                                         <Label  Grid.Row="11" Grid.Column="0"
                                                 TextColor="{DynamicResource PrimaryColor}" 
-                                                HorizontalTextAlignment="Center"
+                                                HorizontalTextAlignment="Start"
                                                 Text="{Binding SaturdayParts}" FontSize="15"  />
 
-                                        <Label  Grid.Row="20" Grid.Column="0" TextDecorations="Underline"
+                                        <Label  Grid.Row="12" Grid.Column="0" TextDecorations="Underline"
                                                 TextColor="{DynamicResource PrimaryColor}" 
-                                                HorizontalTextAlignment="Start"
+                                                HorizontalTextAlignment="Start" FontAttributes="Bold"
                                                 Text="Niedziela" FontSize="18"  />
                                         <Label  Grid.Row="13" Grid.Column="0"
                                                 TextColor="{DynamicResource PrimaryColor}" 
-                                                HorizontalTextAlignment="Center"
+                                                HorizontalTextAlignment="Start"
                                                 Text="{Binding SundayParts}" FontSize="15"  />
 
 
